# virlen-app

./: .gitignore  LICENSE  README-CN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  main.yml
public/script/: ripple-button.js
src/: main.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/default-skills/pptx/: package-lock.json
src-tauri/resources/quasivision_models/icon-classifier/: labels.json
src-tauri/resources/quasivision_models/object-detection/: yoloe-26n_classes.txt
src-tauri/src/: common_service.rs  file_ops.rs  lib.rs  load_env.rs  search.rs  task_manager.rs  vision_service.rs
src-tauri/src/rag/: document.rs  embedding.rs  mod.rs  rag_service.rs  vector_store.rs
src/domain/: index.ts
src/domain/agent/: index.ts
src/domain/engine/: compress-context.ts  engine.ts  index.ts  llm-round.ts  run-state.ts  storm-breaker.ts  tool-executor.ts  types.ts
src/domain/ports/: AgentEnginePort.ts  KnowledgeBasePort.ts  ProviderPort.ts  SandboxPort.ts  SearchProviderPort.ts  SecurityPort.ts  ToolRegistry.ts  index.ts
src/domain/provider/: config.ts  index.ts
src/domain/rag/: index.ts  types.ts
src/domain/search/: config.ts  index.ts  types.ts
src/domain/security/: index.ts  types.ts
src/domain/tools/: category.ts  index.ts  types.ts
src/events/: commentEvent.ts  menuEvent.ts  settingsEvent.ts  toolInteractEvent.ts  updateEvent.ts
src/infrastructure/: repo.ts
src/infrastructure/agentRepo/: index.ts
src/infrastructure/provider/: anthropic.ts  gemini.ts  http-utils.ts  index.ts  openai.ts  types.ts  visionInject.ts
src/infrastructure/rag/: knowledge-base-store.ts
src/infrastructure/sandbox/: index.ts  plugin-shell-sandbox.ts
src/infrastructure/search-providers/: bocha.ts  factory.ts  index.ts  searxng.ts  tavily.ts
src/infrastructure/securityRepo/: index.ts
src/infrastructure/sessionRepo/: index.ts
src/infrastructure/tools/: index.ts  output-store.ts  terminal-output.ts
src/infrastructure/vision/: index.ts  types.ts
src/services/: agent-service.ts  chat-service.ts  download-service.ts  env-service.ts  export-service.ts  provider-service.ts  rag-service.ts  search-provider-init.ts  search-provider-service.ts  security-service.ts  update-service.ts
src/services/port/: SecurityService.ts  ToolService.ts  index.ts
src/services/tool-service/: command_confirm.ts  index.ts  types.ts  user_choice.ts
src/skill/: importService.ts  index.ts  plazaService.ts  skillStore.ts  types.ts
src/types/: index.ts
src/ui/: App.css  App.tsx  vite-env.d.ts
src/ui/constants/: index.ts  quickActions.ts
src/ui/hooks/: useFontSize.ts  useTheme.ts  useTime.ts
src/ui/i18n/: index.ts
src/utils/: EventEmitter.ts  common.ts  db.ts  diff.ts  localStorage.ts  mdYamlFrontmatter.ts  pathCanonicealize.ts  runtimeState.ts  storageState.ts  time.ts  uuid.ts  withCancel.ts
tests/: setup.ts
tests/domain/: compress-context.test.ts  run-state.test.ts  storm-breaker.test.ts
tests/rag/: knowledge-base-store.test.ts  knowledge-base-tools.test.ts  rag-service.test.ts
tests/services/: export-service.test.ts
tests/utils/: common.test.ts
(+169 files in other folders)
